Mar 24, 2022
  updated rat lineage (NCBI taxonomy)
  
Mar 17, 2022
  deployed OmimPsCustomDoTermMapper, to populate table OMIM_PS_CUSTOM_DO

Mar 08, 2022
  do qc: implemented checking of OMIM:PS ids (if they are assigned to the same terms in RGD as they are in DO)

Feb 14, 2022
  parser: updated to allow loading of MONDO ontology

Feb 10, 2022
  DO qc: fixed handling of UTF-8 characters

Jan 04, 2022
  obo exporter: config fix (was using retired ftp://ftp.rgd.mcw.edu)

Dec 20, 2021
  parser: UBERON ontology: 'mutually_spacially_disjoint_with' relationship loaded as synonyms to avoid cycles
  upgraded log4j to avoid zero day vulnerability

Sep 14, 2021
  refactor loader to simplify code and use java streams

Jul 26, 2021
  parser: treats all files as UTF-8-encoded
    (previously most files were considered ISO-8859-1 encoded, and some UTF-8 encoded;
     that resulted in garbled characters being loaded, because now everybody is using UTF-8 encoding)

Jul 21, 2021
  loader: added removal of cyclic relationship for UBERON

Jun 18, 2021
  TermStatsLoaderWithFilter: fixed handling of species list (verver, molerat were missing)

Apr 29, 2021
  tuned up OBO validation script

Feb 4, 2021
  fixed OBO validation script

Jan 27, 2021
  CL,MI,SO,UBERON ontologies: updated sources (files for these ontologies did not change for 9+ months)
  security: the value of api key is now stored in an external property file api.key (not in the code)

Jan 13, 2021
  obo exporter fix: added escaping of double quote characters in term definitions
  DO loader: fixed loading of definition dbxrefs
  scripts: added script to validate OBO files against OBO spec

Dec 22, 2020
  DO QC: improved handling of xref synonyms

Aug 10, 2020
  fixed script run_stats_update_only.sh

Jul 24, 2020
  DO QC loader: better code to load definition xrefs

Jul 06, 2020
  gviewer stats: simplified code; only processing ontologies without cycles

Jul 03, 2020
  obo file creator: updated code to export term def xrefs
