@@ -1,6 +1,7 @@
 Mar 24, 2022
   updated rat lineage (NCBI taxonomy)
-  
+  go constraints: switched to new source files (old source files no longer available)
+
 Mar 17, 2022
   deployed OmimPsCustomDoTermMapper, to populate table OMIM_PS_CUSTOM_DO
 
